syntax = "proto3";

package service;

option go_package = "github.com/example/protofiles";

service BackendService {
    rpc Compute(TaskRequest) returns (TaskResponse);
}

message TaskRequest {
    string task = 1;
}

message TaskResponse {
    string result = 1;
}